--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "ldrs": "^1.0.2",
+    "lottie-react-native": "^6.7.2",
+    "moti": "^0.29.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
