--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "ldrs": "^1.0.2",
-    "lottie-react-native": "^6.7.2",
     "moti": "^0.29.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -39,6 +38,7 @@
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-masonry-list": "^2.16.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
