--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-seoul/masonry-list": "^1.4.2",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
@@ -25,6 +25,7 @@
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-media-library": "^16.0.4",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
